--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,18 @@
 
 * {
     box-sizing: border-box;
+    text-align: center;
+}
+
+#calculator {
+    width: 400px;
+    margin: 50px auto;
+    background-color: lightgray;
+    border-radius: 50px;
+    padding: 50px;
+}
+
+footer {
+    background-color: gray;
+    padding: 50px;
 }
