continued styling; added mixins partial

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,40 @@
 @import "partials/variables";
+@import "partials/mixins";
 
 * {
     box-sizing: border-box;
     text-align: center;
 }
 
+body {
+    background-color: $black;
+    @include font-styles(20px, $text-font, $black);
+}
+
 #calculator {
-    width: 400px;
+    width: 500px;
     margin: 50px auto;
-    background-color: lightgray;
+    background-color: $white;
     border-radius: 50px;
-    padding: 50px;
+    padding: $padding;
+}
+
+h1 {
+    @include font-styles(45px, $headline-font, $secondary-color);
+}
+
+#bill-total,
+#number-of-people {
+    padding: $input-padding;
+}
+
+#number-of-people {
+    display: block;
+    margin: 0 auto;
+}
+
+.button {
+    margin: 20px;
 }
 
 #tip-section {
@@ -18,6 +42,6 @@
 }
 
 footer {
-    background-color: gray;
-    padding: 50px;
+    background-color: $theme-color;
+    padding: $padding;
 }
