--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,43 @@
+@import url("https://fonts.googleapis.com/css?family=Calistoga|Roboto&display=swap");
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-align: center;
 }
 
+body {
+  background-color: #242528;
+  font-size: 20px;
+  font-family: "Roboto", Arial, sans-serif;
+  color: #242528;
+}
+
 #calculator {
-  width: 400px;
+  width: 500px;
   margin: 50px auto;
-  background-color: lightgray;
+  background-color: #E3F2FD;
   border-radius: 50px;
   padding: 50px;
+}
+
+h1 {
+  font-size: 45px;
+  font-family: "Calistoga", cursive;
+  color: #DB5461;
+}
+
+#bill-total,
+#number-of-people {
+  padding: 15px;
+}
+
+#number-of-people {
+  display: block;
+  margin: 0 auto;
+}
+
+.button {
+  margin: 20px;
 }
 
 #tip-section {
@@ -17,7 +45,7 @@
 }
 
 footer {
-  background-color: gray;
+  background-color: #8AA29E;
   padding: 50px;
 }
 /*# sourceMappingURL=main.css.map */
