--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ body {
   color: #242528;
 }
 
+p {
+  margin: 5px;
+}
+
 #calculator {
   width: 500px;
   margin: 50px auto;
@@ -28,18 +32,40 @@ h1 {
   color: #DB5461;
 }
 
-p {
-  margin: 5px;
-}
-
 input,
 select {
   margin: 20px;
+  width: 50%;
+  max-width: 50%;
+  border: 1px solid #8AA29E;
+  background-color: #E3F2FD;
+  color: #242528;
+}
+
+input:focus,
+select:focus {
+  border: 0px;
+  -webkit-box-shadow: 0 0 1px 3px #DB5461;
+          box-shadow: 0 0 1px 3px #DB5461;
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  outline: none;
+}
+
+select {
+  display: block;
+  line-height: 1.3;
+  padding: 15px;
+  margin: 20px auto;
+  border-radius: 0;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 #bill-total,
 #number-of-people {
   padding: 15px;
+  text-align: left;
 }
 
 #number-of-people {
@@ -55,6 +81,22 @@ select {
   font-size: 30px;
   font-family: "Calistoga", cursive;
   color: #DB5461;
+}
+
+.button {
+  padding: 15px;
+  width: 30%;
+  max-width: 30%;
+  border-radius: 40px;
+  background-color: #DB5461;
+  border: none;
+  font-size: 16px;
+  font-family: "Roboto", Arial, sans-serif;
+  color: #E3F2FD;
+}
+
+.button:hover {
+  background-color: #8AA29E;
 }
 
 footer {
