--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "partials/variables";
 @import "partials/mixins";
 
+
 * {
     box-sizing: border-box;
     text-align: center;
@@ -11,6 +12,10 @@
 body {
     background-color: $black;
     @include font-styles;
+}
+
+p {
+    margin: 5px;
 }
 
 #calculator {
@@ -25,18 +30,39 @@ h1 {
     @include font-styles(50px, $headline-font, $secondary-color);
 }
 
-p {
-    margin: 5px;
-}
-
 input,
 select {
     margin: 20px;
+    width: 50%;
+    max-width: 50%;
+    border: 1px solid $theme-color;
+    background-color: $white;
+    color: $black;
+}
+
+input:focus,
+select:focus {
+    border: 0px;
+    box-shadow: 0 0 1px 3px $secondary-color;
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    outline: none;
+}
+
+select {
+    display: block;
+    line-height: 1.3;
+    padding: $input-padding;
+    margin: 20px auto;
+    border-radius: 0;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 #bill-total,
 #number-of-people {
     padding: $input-padding;
+    text-align: left;
 }
 
 #number-of-people {
@@ -50,6 +76,20 @@ select {
 
 #tip-amount {
     @include font-styles(30px, $headline-font, $secondary-color);
+}
+
+.button {
+    padding: $input-padding;
+    width: 30%;
+    max-width: 30%;
+    border-radius: $rounded-button;
+    background-color: $secondary-color;
+    border: none;
+    @include font-styles(16px, $text-font, $white);
+}
+
+.button:hover {
+    background-color: $theme-color;
 }
 
 footer {
