--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,8 @@ select {
   display: none;
 }
 
-#tip-amount {
+#tip-amount,
+.dollar-sign {
   font-size: 30px;
   font-family: "Calistoga", cursive;
   color: #DB5461;
