added data type verification; added displayError function to handle non-numbers being entered by users

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,11 +73,13 @@ select {
     margin: 0 auto;
 }
 
-#tip-section {
+#tip-section,
+#error-section {
     display: none;
 }
 
-#tip-amount,
+.tip-amount,
+#error,
 .dollar-sign {
     @include font-styles(30px, $headline-font, $secondary-color);
 }
